--- a/.config/i3/config
+++ b/.config/i3/config
@@ -15,7 +15,7 @@ set $mod Mod4
 set_from_resource $primary Xdisplay.primary DisplayPort-0
 set_from_resource $secondary Xdisplay.secondary HDMI-A-0
 set $filemgr thunar
-set $term terminator
+set $term st
 set $browser firefox
 
 #autostart
@@ -255,6 +255,7 @@ bindsym $mod+Return exec $term
 bindsym $mod+Shift+Return exec $browser
 bindsym $mod+Shift+d exec --no-startup-id rofi -sort -sidebar-mode -modi "drun#window#run#ssh#Workspaces:~/.local/bin/i3_switch_workspaces.sh" -show drun
 bindsym Mod1+Tab exec --no-startup-id rofi -show window
+bindsym $mod+Shift+p exec --no-startup-id killall -SIGUSR1 picom
 
 # Cause Settings app to float above tiled windows
 floating_maximum_size -1 x -1
