--- a/.config/i3/config
+++ b/.config/i3/config
@@ -28,10 +28,11 @@ exec --no-startup-id xsettingsd -c ~/.config/i3/xsettings.conf
 exec --no-startup-id dunst
 exec --no-startup-id xsetroot -cursor_name left_ptr
 exec_always --no-startup-id ~/.local/bin/i3-autotiling
+exec --no-starup-id unclutter -root
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:Iosevka Term 11
+font pango:Iosevka 11
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
