--- a/.config/i3/config
+++ b/.config/i3/config
@@ -7,11 +7,13 @@
 set $mod Mod4
 set_from_resource $primary Xdisplay.primary DisplayPort-0
 set_from_resource $secondary Xdisplay.secondary HDMI-A-0
+set_from_resource $temperature hwmon.temperature /sys/class/hwmon/hwmon0/temp1_input
 set $filemgr thunar
 set $term st
-set $browser firefox
+set $browser x-www-browser
 
 #autostart
+exec --no-startup-id ln -sf $temperature ~/.cache/temp
 exec_always --no-startup-id ~/.local/bin/update-hsetroot.sh 
 exec --no-startup-id redshift-gtk
 #exec --no-startup-id pasystray
