--- a/.config/i3/py3status.conf
+++ b/.config/i3/py3status.conf
@@ -76,9 +76,7 @@ disk "/" {
 
 cpu_temperature 0 {
         format = " %degrees °C"
-#   path = "/sys/devices/platform/coretemp.0/hwmon/hwmon1/temp1_input"
-#	path = "/sys/devices/pci0000:00/0000:00:18.3/hwmon/hwmon1/temp1_input"
-	    path = "/sys/devices/virtual/thermal/thermal_zone0/hwmon1/temp1_input"
+        path = "~/.cache/temp"
 }
 
 cpu_usage {
